[package]
name = "number_of_lines"
version = "0.1.0"
edition = "2021"
authors = ["Sougata Bhattacharjee `D-3-X-T-3-R` <sougata.bhattacharjee94@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
linecount = "0.1.0"
clap = "3.0.12"
